add powered by eScience Center in footer

--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,7 @@
       </div>
 
       <div class="footer-copy">
-        © <span id="year"></span> RESCUE Project
+        © <span id="year"></span> RESCUE Project <br> <small>Powered by <a href="https://www.esciencecenter.nl/">Netherland eScience Center</a> </small> 
       </div>
     </div>
   </footer>
